<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SecondFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="175dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="185dp" />

        <TextView
            android:id="@+id/textview_second"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="26dp"
            android:text="@string/press_the_video_for_pausing_and_the_video" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="273dp"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="73dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="25dp"
            android:text="@string/previous" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="97dp"
            android:layout_marginTop="41dp"
            android:text="@string/this_is_where_the_title_should_go" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>